--- a/docs/usage/man/cunicu-completion-powershell.1
+++ b/docs/usage/man/cunicu-completion-powershell.1
@@ -1,19 +1,19 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-completion-fish - Generate the autocompletion script for fish
+cunicu-completion-powershell - Generate the autocompletion script for powershell
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu completion fish [flags]\fP
+\fBcunicu completion powershell [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Generate the autocompletion script for the fish shell.
+Generate the autocompletion script for powershell.
 
 .PP
 To load completions in your current shell session:
@@ -22,31 +22,20 @@ To load completions in your current shell session:
 .RS
 
 .nf
-cunicu completion fish | source
+cunicu completion powershell | Out-String | Invoke-Expression
 
 .fi
 .RE
 
 .PP
-To load completions for every new session, execute once:
-
-.PP
-.RS
-
-.nf
-cunicu completion fish > ~/.config/fish/completions/cunicu.fish
-
-.fi
-.RE
-
-.PP
-You will need to start a new shell for this setup to take effect.
+To load completions for every new session, add the output of the above command
+to your powershell profile.
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for fish
+	help for powershell
 
 .PP
 \fB--no-descriptions\fP[=false]
@@ -73,4 +62,4 @@ You will need to start a new shell for this setup to take effect.
 
 .SH SEE ALSO
 .PP
-\fBcunicu-completion(3)\fP
+\fBcunicu-completion(1)\fP
