--- a/docs/usage/man/cunicu-monitor.1
+++ b/docs/usage/man/cunicu-monitor.1
@@ -1,9 +1,9 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-monitor - Monitor the cunicu daemon for events
+cunicu-monitor - Monitor the cunīcu daemon for events
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ cunicu-monitor - Monitor the cunicu daemon for events
 
 .SH DESCRIPTION
 .PP
-Monitor the cunicu daemon for events
+Monitor the cunīcu daemon for events
 
 
 .SH OPTIONS
@@ -50,4 +50,4 @@ Monitor the cunicu daemon for events
 
 .SH SEE ALSO
 .PP
-\fBcunicu(3)\fP
+\fBcunicu(1)\fP
