--- a/docs/usage/man/cunicu-restart.1
+++ b/docs/usage/man/cunicu-restart.1
@@ -1,25 +1,25 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-wg-showconf - Shows the current configuration and device information
+cunicu-restart - Restart the cunīcu daemon
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu wg showconf [flags] \fP
+\fBcunicu restart [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Sets the current configuration of  to the contents of , which must be in the wg(8) format.
+Restart the cunīcu daemon
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for showconf
+	help for restart
 
 .PP
 \fB-s\fP, \fB--rpc-socket\fP="/var/run/cunicu.sock"
@@ -46,4 +46,4 @@ Sets the current configuration of  to the contents of , which must be in the wg(
 
 .SH SEE ALSO
 .PP
-\fBcunicu-wg(3)\fP
+\fBcunicu(1)\fP
