--- a/docs/usage/man/cunicu-wg.1
+++ b/docs/usage/man/cunicu-wg.1
@@ -1,5 +1,5 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
@@ -13,7 +13,11 @@ cunicu-wg - WireGuard commands
 
 .SH DESCRIPTION
 .PP
-WireGuard commands
+The wg sub-command mimics the wg(8) commands of the wireguard-tools package.
+In contrast to the wg(8) command, the cunico sub-command delegates it tasks to a running cunucu daemon.
+
+.PP
+Currently, only a subset of the wg(8) are supported.
 
 
 .SH OPTIONS
@@ -42,4 +46,4 @@ WireGuard commands
 
 .SH SEE ALSO
 .PP
-\fBcunicu(3)\fP, \fBcunicu-wg-genkey(3)\fP, \fBcunicu-wg-genpsk(3)\fP, \fBcunicu-wg-pubkey(3)\fP, \fBcunicu-wg-show(3)\fP, \fBcunicu-wg-showconf(3)\fP
+\fBcunicu(1)\fP, \fBcunicu-wg-genkey(1)\fP, \fBcunicu-wg-genpsk(1)\fP, \fBcunicu-wg-pubkey(1)\fP, \fBcunicu-wg-show(1)\fP, \fBcunicu-wg-showconf(1)\fP
