--- a/docs/usage/man/cunicu-completion-bash.1
+++ b/docs/usage/man/cunicu-completion-bash.1
@@ -1,32 +1,23 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-completion-zsh - Generate the autocompletion script for zsh
+cunicu-completion-bash - Generate the autocompletion script for bash
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu completion zsh [flags]\fP
+\fBcunicu completion bash\fP
 
 
 .SH DESCRIPTION
 .PP
-Generate the autocompletion script for the zsh shell.
+Generate the autocompletion script for the bash shell.
 
 .PP
-If shell completion is not already enabled in your environment you will need
-to enable it.  You can execute the following once:
-
-.PP
-.RS
-
-.nf
-echo "autoload -U compinit; compinit" >> ~/.zshrc
-
-.fi
-.RE
+This script depends on the 'bash-completion' package.
+If it is not installed already, you can install it via your OS's package manager.
 
 .PP
 To load completions in your current shell session:
@@ -35,7 +26,7 @@ To load completions in your current shell session:
 .RS
 
 .nf
-source <(cunicu completion zsh); compdef _cunicu cunicu
+source <(cunicu completion bash)
 
 .fi
 .RE
@@ -48,7 +39,7 @@ To load completions for every new session, execute once:
 .RS
 
 .nf
-cunicu completion zsh > "${fpath[1]}/_cunicu"
+cunicu completion bash > /etc/bash_completion.d/cunicu
 
 .fi
 .RE
@@ -58,7 +49,7 @@ cunicu completion zsh > "${fpath[1]}/_cunicu"
 .RS
 
 .nf
-cunicu completion zsh > $(brew --prefix)/share/zsh/site-functions/_cunicu
+cunicu completion bash > $(brew --prefix)/etc/bash_completion.d/cunicu
 
 .fi
 .RE
@@ -70,7 +61,7 @@ You will need to start a new shell for this setup to take effect.
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for zsh
+	help for bash
 
 .PP
 \fB--no-descriptions\fP[=false]
@@ -97,4 +88,4 @@ You will need to start a new shell for this setup to take effect.
 
 .SH SEE ALSO
 .PP
-\fBcunicu-completion(3)\fP
+\fBcunicu-completion(1)\fP
