--- a/docs/usage/man/cunicu-completion.1
+++ b/docs/usage/man/cunicu-completion.1
@@ -1,33 +1,26 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-signal - Start gRPC signaling server
+cunicu-completion - Generate the autocompletion script for the specified shell
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu signal [flags]\fP
+\fBcunicu completion [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Start gRPC signaling server
+Generate the autocompletion script for cunicu for the specified shell.
+See each sub-command's help for details on how to use the generated script.
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for signal
-
-.PP
-\fB-L\fP, \fB--listen\fP=":8080"
-	listen address
-
-.PP
-\fB-S\fP, \fB--secure\fP[=false]
-	listen with TLS
+	help for completion
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
@@ -50,4 +43,4 @@ Start gRPC signaling server
 
 .SH SEE ALSO
 .PP
-\fBcunicu(3)\fP
+\fBcunicu(1)\fP, \fBcunicu-completion-bash(1)\fP, \fBcunicu-completion-fish(1)\fP, \fBcunicu-completion-powershell(1)\fP, \fBcunicu-completion-zsh(1)\fP
