--- a/docs/usage/man/cunicu-config-get.1
+++ b/docs/usage/man/cunicu-config-get.1
@@ -1,26 +1,25 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-completion - Generate the autocompletion script for the specified shell
+cunicu-config-get - Get current value of a configuration setting
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu completion [flags]\fP
+\fBcunicu config get [key] [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Generate the autocompletion script for cunicu for the specified shell.
-See each sub-command's help for details on how to use the generated script.
+Get current value of a configuration setting
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for completion
+	help for get
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
@@ -37,10 +36,14 @@ See each sub-command's help for details on how to use the generated script.
 	log level (one of: debug, info, warn, error, dpanic, panic, and fatal)
 
 .PP
+\fB-s\fP, \fB--rpc-socket\fP="/var/run/cunicu.sock"
+	Unix control and monitoring socket
+
+.PP
 \fB-v\fP, \fB--verbose\fP=0
 	verbosity level
 
 
 .SH SEE ALSO
 .PP
-\fBcunicu(3)\fP, \fBcunicu-completion-bash(3)\fP, \fBcunicu-completion-fish(3)\fP, \fBcunicu-completion-powershell(3)\fP, \fBcunicu-completion-zsh(3)\fP
+\fBcunicu-config(1)\fP
