--- a/docs/usage/man/cunicu-selfupdate.1
+++ b/docs/usage/man/cunicu-selfupdate.1
@@ -1,25 +1,30 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-wg-genkey - Generates a random private key in base64 and prints it to standard output.
+cunicu-selfupdate - Update the cunīcu binary
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu wg genkey [flags]\fP
+\fBcunicu selfupdate [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Generates a random private key in base64 and prints it to standard output.
+Downloads the latest stable release of cunīcu from GitHub and replaces the currently running binary.
+After download, the authenticity of the binary is verified using the GPG signature on the release files.
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for genkey
+	help for selfupdate
+
+.PP
+\fB-o\fP, \fB--output\fP="cunicu"
+	Save the downloaded file as \fB\fCfilename\fR
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
@@ -42,4 +47,4 @@ Generates a random private key in base64 and prints it to standard output.
 
 .SH SEE ALSO
 .PP
-\fBcunicu-wg(3)\fP
+\fBcunicu(1)\fP
