--- a/docs/usage/man/cunicu-stop.1
+++ b/docs/usage/man/cunicu-stop.1
@@ -1,25 +1,29 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-config-set - Update the value of a configuration setting
+cunicu-stop - Shutdown the cunīcu daemon
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu config set key value [flags]\fP
+\fBcunicu stop [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Update the value of a configuration setting
+Shutdown the cunīcu daemon
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for set
+	help for stop
+
+.PP
+\fB-s\fP, \fB--rpc-socket\fP="/var/run/cunicu.sock"
+	Unix control and monitoring socket
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
@@ -36,14 +40,10 @@ Update the value of a configuration setting
 	log level (one of: debug, info, warn, error, dpanic, panic, and fatal)
 
 .PP
-\fB-s\fP, \fB--rpc-socket\fP="/var/run/cunicu.sock"
-	Unix control and monitoring socket
-
-.PP
 \fB-v\fP, \fB--verbose\fP=0
 	verbosity level
 
 
 .SH SEE ALSO
 .PP
-\fBcunicu-config(3)\fP
+\fBcunicu(1)\fP
