--- a/docs/usage/man/cunicu-wg-genkey.1
+++ b/docs/usage/man/cunicu-wg-genkey.1
@@ -1,25 +1,25 @@
 .nh
-.TH "cunicu" "3" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
-cunicu-wg-genpsk - Generates a random preshared key in base64 and prints it to standard output.
+cunicu-wg-genkey - Generates a random private key in base64 and prints it to standard output.
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu wg genpsk [flags]\fP
+\fBcunicu wg genkey [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Generates a random preshared key in base64 and prints it to standard output.
+Generates a random private key in base64 and prints it to standard output.
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for genpsk
+	help for genkey
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
@@ -42,4 +42,4 @@ Generates a random preshared key in base64 and prints it to standard output.
 
 .SH SEE ALSO
 .PP
-\fBcunicu-wg(3)\fP
+\fBcunicu-wg(1)\fP
