--- a/docs/usage/man/cunicu.1
+++ b/docs/usage/man/cunicu.1
@@ -13,7 +13,26 @@ cunicu - cunīcu is a user-space daemon managing WireGuard® interfaces to estab
 
 .SH DESCRIPTION
 .PP
-It relies on the awesome pion/ice package for the interactive connectivity establishment as well as bundles the Go user-space implementation of WireGuard in a single binary for environments in which WireGuard kernel support has not landed yet.
+.RS
+
+.nf
+   (\\(\\       ▟▀▀▙ █  █ █▀▀▙ ▀▀▀ ▟▀▀▙ █  ▙     
+   (-,-)      █    █  █ █  █ ▀█  █    █  █     (\\_/)
+ o_(")(")     ▜▄▄▛ ▜▄▄▛ █  █ ▄█▄ ▜▄▄▛ ▜▄▄▛     (•_•)
+              zero-conf • p2p • mesh • vpn     /> ❤️  WireGuard™
+
+.fi
+.RE
+
+.PP
+cunīcu is a user-space daemon managing WireGuard® interfaces to
+establish peer-to-peer connections in harsh network environments.
+
+.PP
+It relies on the awesome pion/ice package for the interactive
+connectivity establishment as well as bundles the Go user-space
+implementation of WireGuard in a single binary for environments
+in which WireGuard kernel support has not landed yet.
 
 
 .SH OPTIONS
