docs: update auto-generated usage info
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/man/cunicu-addresses.1
+++ b/docs/usage/man/cunicu-addresses.1
@@ -1,5 +1,5 @@
 .nh
-.TH "cunīcu" "1" "Sep 2022" "https://github.com/stv0g/cunicu" ""
+.TH "cunīcu" "1" "Oct 2022" "https://github.com/stv0g/cunicu" ""
 
 .SH NAME
 .PP
@@ -29,6 +29,10 @@ This sub-command accepts a WireGuard public key on the standard input and prints
 .PP
 \fB-6\fP, \fB--ipv6\fP[=false]
 	Print IPv6 address only
+
+.PP
+\fB-m\fP, \fB--mask\fP[=false]
+	Print CIDR mask
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
