--- a/docs/usage/man/cunicu-invite.1
+++ b/docs/usage/man/cunicu-invite.1
@@ -3,28 +3,35 @@
 
 .SH NAME
 .PP
-cunicu-selfupdate - Update the cunīcu binary
+cunicu-invite - Add a new peer to the local daemon configuration and return the required configuration for this new peer
 
 
 .SH SYNOPSIS
 .PP
-\fBcunicu selfupdate [flags]\fP
+\fBcunicu invite [interface] [flags]\fP
 
 
 .SH DESCRIPTION
 .PP
-Downloads the latest stable release of cunīcu from GitHub and replaces the currently running binary.
-After download, the authenticity of the binary is verified using the GPG signature on the release files.
+Add a new peer to the local daemon configuration and return the required configuration for this new peer
 
 
 .SH OPTIONS
 .PP
 \fB-h\fP, \fB--help\fP[=false]
-	help for selfupdate
+	help for invite
 
 .PP
-\fB-o\fP, \fB--output\fP="cunicu"
-	Save the downloaded file as \fB\fCfilename\fR
+\fB-L\fP, \fB--listen-port\fP=51820
+	Listen port for generated config
+
+.PP
+\fB-q\fP, \fB--qr-code\fP[=false]
+	Show config as QR code in terminal
+
+.PP
+\fB-s\fP, \fB--rpc-socket\fP="/var/run/cunicu.sock"
+	Unix control and monitoring socket
 
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
