--- a/docs/usage/man/cunicu-completion-zsh.1
+++ b/docs/usage/man/cunicu-completion-zsh.1
@@ -79,7 +79,7 @@ You will need to start a new shell for this setup to take effect.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
