--- a/docs/usage/man/cunicu-completion.1
+++ b/docs/usage/man/cunicu-completion.1
@@ -25,7 +25,7 @@ See each sub-command's help for details on how to use the generated script.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
