--- a/docs/usage/man/cunicu-config-reload.1
+++ b/docs/usage/man/cunicu-config-reload.1
@@ -24,7 +24,7 @@ Reload the configuration of the cunīcu daemon
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
