--- a/docs/usage/man/cunicu-config.1
+++ b/docs/usage/man/cunicu-config.1
@@ -25,7 +25,7 @@ cunicu-config - Manage configuration of a running cunīcu daemon.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
