--- a/docs/usage/man/cunicu-invite.1
+++ b/docs/usage/man/cunicu-invite.1
@@ -26,7 +26,7 @@ Add a new peer to the local daemon configuration and return the required configu
 	Listen port for generated config
 
 .PP
-\fB-q\fP, \fB--qr-code\fP[=false]
+\fB-Q\fP, \fB--qr-code\fP[=false]
 	Show config as QR code in terminal
 
 .PP
@@ -36,7 +36,7 @@ Add a new peer to the local daemon configuration and return the required configu
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
