--- a/docs/usage/man/cunicu-relay.1
+++ b/docs/usage/man/cunicu-relay.1
@@ -70,7 +70,7 @@ Example: turn:user1:pass1@server.com
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
