--- a/docs/usage/man/cunicu-selfupdate.1
+++ b/docs/usage/man/cunicu-selfupdate.1
@@ -29,7 +29,7 @@ After download, the authenticity of the binary is verified using the GPG signatu
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
