--- a/docs/usage/man/cunicu-version.1
+++ b/docs/usage/man/cunicu-version.1
@@ -32,7 +32,7 @@ Show version of the cunīcu binary and optionally also a running daemon
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
