--- a/docs/usage/man/cunicu-wg-genpsk.1
+++ b/docs/usage/man/cunicu-wg-genpsk.1
@@ -24,7 +24,7 @@ Generates a random preshared key in base64 and prints it to standard output.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
