--- a/docs/usage/man/cunicu-wg-pubkey.1
+++ b/docs/usage/man/cunicu-wg-pubkey.1
@@ -24,7 +24,7 @@ Calculates a public key and prints it in base64 to standard output from a corres
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
