--- a/docs/usage/man/cunicu-wg-show.1
+++ b/docs/usage/man/cunicu-wg-show.1
@@ -45,7 +45,7 @@ Subsequent lines are printed for each peer and contain in order separated by tab
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
