--- a/docs/usage/man/cunicu-wg-showconf.1
+++ b/docs/usage/man/cunicu-wg-showconf.1
@@ -28,7 +28,7 @@ Shows the current configuration of \fB\fCinterface-name\fR in the wg(8) format.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
