--- a/docs/usage/man/cunicu-wg.1
+++ b/docs/usage/man/cunicu-wg.1
@@ -28,7 +28,7 @@ Currently, only a subset of the wg(8) are supported.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
