--- a/docs/usage/man/cunicu.1
+++ b/docs/usage/man/cunicu.1
@@ -37,7 +37,7 @@ in which WireGuard kernel support has not landed yet.
 
 .SH OPTIONS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
