--- a/docs/usage/man/cunicu-completion-powershell.1
+++ b/docs/usage/man/cunicu-completion-powershell.1
@@ -44,7 +44,7 @@ to your powershell profile.
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
