--- a/docs/usage/man/cunicu-restart.1
+++ b/docs/usage/man/cunicu-restart.1
@@ -28,7 +28,7 @@ Restart the cunīcu daemon
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
