--- a/docs/usage/man/cunicu-signal.1
+++ b/docs/usage/man/cunicu-signal.1
@@ -32,7 +32,7 @@ Start gRPC signaling server
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
