--- a/docs/usage/man/cunicu-status.1
+++ b/docs/usage/man/cunicu-status.1
@@ -36,7 +36,7 @@ Show current status of the cunīcu daemon, its interfaces and peers
 
 .SH OPTIONS INHERITED FROM PARENT COMMANDS
 .PP
-\fB-C\fP, \fB--color\fP="auto"
+\fB-q\fP, \fB--color\fP="auto"
 	Enable colorization of output (one of: auto, always, never)
 
 .PP
