docs: update usage documentation
Signed-off-by: Steffen Vogel <post@steffenvogel.de>

--- a/docs/usage/man/cunicu-addresses.1
+++ b/docs/usage/man/cunicu-addresses.1
@@ -3,7 +3,7 @@
 
 .SH NAME
 .PP
-cunicu-addresses - Calculate link-local IPv4 and IPv6 addresses from a WireGuard X25519 public key
+cunicu-addresses - Derive IPv4 and IPv6 addresses from a WireGuard X25519 public key
 
 
 .SH SYNOPSIS
@@ -13,7 +13,7 @@ cunicu-addresses - Calculate link-local IPv4 and IPv6 addresses from a WireGuard
 
 .SH DESCRIPTION
 .PP
-cunīcu auto-configuration feature derives and assigns link-local IPv4 and IPv6 addresses based on the public key of the WireGuard interface.
+cunīcu auto-configuration feature derives and assigns IPv4 and IPv6 addresses based on the public key of the WireGuard interface.
 This sub-command accepts a WireGuard public key on the standard input and prints out the calculated IP addresses on the standard output.
 
 
